# base-jobs

./: .ansible-lint  README.rst  setup.cfg  test-requirements.txt  tox.ini
doc/source/: base.rst  conf.py  docker-image.rst  documentation-jobs.rst  index.rst  misc-jobs.rst
playbooks/base/: post-logs.yaml  pre.yaml
playbooks/infra-prod/: pre.yaml  setup-keys.yaml  setup-src.yaml
roles/configure-unbound/tasks/: main.yaml
roles/prepare-workspace-k8/: README.rst
roles/prepare-workspace-k8/tasks/: main.yaml  rsync.yaml
roles/submit-log-processor-jobs/module_utils/: gear.py
roles/submit-logstash-jobs/defaults/: main.yaml
roles/virtualenv-config/tasks/: main.yaml
roles/write-root-marker/tasks/: main.yaml
zuul.d/: jobs.yaml  nodesets.yaml  project.yaml  secrets.yaml
