[metadata]
name = base-jobs
summary = Base jobs for Open Telekom Cloud
description-file =
    README.rst
author = OpenTelekomCloud Team
home-page = http://open.telekom.cloud/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
